======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.05-r2

## New Tools

## New Features

## Fixes
- `script-manager`: the ``scripts_modactive`` and ``scripts_modinstalled`` folders of a script-enabled mod will be properly added to the script path search list

## Misc Improvements

## Documentation
- added a clarification link to DF's Lua API documentation to the DFHack Lua API documentation, as a way to reduce end-user confusion

## API

## Lua

## Removed

# 52.05-r1

## New Tools

## New Features

## Fixes
- improved file system handling: gracefully handle errors from operations, preventing crashes.
- `zone`: animal assignment dialog now tolerates corrupt animal-to-pasture links.

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.04-r1

## New Tools

## New Features
- Compatibility with DF 52.04

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.03-r2

## New Tools

## New Features
- `nestboxes`: allow limiting egg protection to nestboxes inside a designated burrow
- `tailor`: tailor now provides optional dye automation

## Fixes
- ``Units::getReadableName`` will no longer append a comma to the names of histfigs with no profession
- `stockpiles`: fixed off-by-one error in exporting furniture stockpiles

## Misc Improvements

## Documentation

## API
- ``Job``: new functions ``createLinked`` and ``assignToWorkshop``
- ``Units``: new functions ``getFocusPenalty``, ``unbailableSocialActivity``, ``isJobAvailable``

## Lua